<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/settings_action"
        android:icon="@drawable/gear"
        android:orderInCategory="1"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/import_timetable_profile_action"
        android:orderInCategory="2"
        android:title="@string/import_timetable_profile"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/backup_action"
        android:orderInCategory="3"
        android:title="@string/backup_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/restore_action"
        android:orderInCategory="4"
        android:title="@string/restore_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/restore_from_file_action"
        android:orderInCategory="5"
        android:title="@string/restore_from_file"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/timetable_profiles_action"
        android:orderInCategory="6"
        android:title="@string/timetable_profiles"
        app:showAsAction="never"
        />
</menu>