<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="asdf"
        android:textColor="?colorOnPrimary"
        android:textSize="@dimen/text_size"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            />

        <Space
            android:layout_width="@dimen/buttons_space"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export"
            />

        <Space
            android:layout_width="@dimen/buttons_space"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/editButton"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            />

    </LinearLayout>
</LinearLayout>