<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginEnd="@dimen/start_end_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/subjectsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/halfs_time_left"
                            android:textColor="@color/left_until_color"
                            android:textSize="@dimen/text_size" />

                        <TextView
                            android:id="@+id/halfsTimeLeftTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/left_until_color"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lessons_time_left"
                            android:textColor="@color/left_until_color"
                            android:textSize="@dimen/text_size" />

                        <TextView
                            android:id="@+id/lessonsTimeLeftTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minWidth="44sp"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/left_until_color"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_times_delimiter"
                        android:textColor="@color/left_until_color"
                        android:textSize="@dimen/text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_times_delimiter"
                        android:textColor="@color/left_until_color"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_until_next_half"
                            android:textColor="@color/left_until_color"
                            android:textSize="@dimen/text_size" />

                        <TextView
                            android:id="@+id/timeUntilNextHalfTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/left_until_color"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_until_next_lesson"
                            android:textColor="@color/left_until_color"
                            android:textSize="@dimen/text_size" />

                        <TextView
                            android:id="@+id/timeUntilNextLessonTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/left_until_color"
                            android:textSize="@dimen/text_size" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>